feat: gaussian interp gradient computes smth meaningful

--- a/notebooks/quad-interpolation.ipynb
+++ b/notebooks/quad-interpolation.ipynb
@@ -16,158 +16,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "from tqdm import tqdm\n",
-    "from torch import Tensor\n",
-    "from typing import Tuple, List\n",
+    "from typing import List, Tuple\n",
     "\n",
     "\n",
-    "class Triangle:\n",
-    "    def __init__(self, v0, v1, v2):\n",
-    "        self.v0 = v0\n",
-    "        self.v1 = v1\n",
-    "        self.v2 = v2\n",
-    "        \n",
-    "    def get_min_pos(self):\n",
-    "        return (\n",
-    "            min(self.v0[0].item(), self.v1[0].item(), self.v2[0].item()),\n",
-    "            min(self.v0[1].item(), self.v1[1].item(), self.v2[1].item())\n",
-    "        )\n",
-    "    \n",
-    "    def get_max_pos(self):\n",
-    "        return (\n",
-    "            max(self.v0[0].item(), self.v1[0].item(), self.v2[0].item()),\n",
-    "            max(self.v0[1].item(), self.v1[1].item(), self.v2[1].item())\n",
-    "        )\n",
-    "    \n",
-    "    def compute_color(self, bar_coords: Tuple[float, float, float], img: Tensor):\n",
-    "        return self.get_color(self.v0, img) * bar_coords[0] + \\\n",
-    "               self.get_color(self.v1, img) * bar_coords[1] + \\\n",
-    "               self.get_color(self.v2, img) * bar_coords[2]\n",
-    "    \n",
-    "    def get_edge(self, edge_idx: int):\n",
-    "        if edge_idx == 0:\n",
-    "            return self.v2 - self.v1\n",
-    "        elif edge_idx == 1:\n",
-    "            return self.v0 - self.v2\n",
-    "        else:\n",
-    "            return self.v1 - self.v0\n",
-    "    \n",
-    "    def get_color(self, vertex, img):\n",
-    "        return img[vertex[1].round().long().item()][vertex[0].round().long().item()]\n",
-    "        \n",
-    "        \n",
-    "# class Vertex:\n",
-    "#     def __init__(self, x, y, color: Tensor):\n",
-    "#         self.pos = (x, y)\n",
-    "#         self.color = color\n",
+    "class Quad:\n",
+    "    def __init__(self, v_left_top, v_right_top, v_right_bot, v_left_bot):\n",
+    "        self.v = (v_left_top, v_right_top, v_right_bot, v_left_bot)\n",
     "\n",
     "\n",
-    "def triangle_interpolation(coords: Tensor, img: Tensor):\n",
+    "def bilinear_interpolation(coords: Tensor, img: Tensor) -> Tensor:\n",
     "    \"\"\"\n",
-    "    Takes a full image, selects coordinates from it and performs the interpolation\n",
-    "    Coords have the shape [grid_height, grid_width, 2]\n",
+    "    Performs a bilinear interpolation on a deformable grid\n",
+    "    Params:\n",
+    "    - coords of shape [grid_height, grid_width, 2]\n",
+    "    - img of shape [height, width, c]\n",
     "    \"\"\"\n",
-    "    grid_height, grid_width = coords.shape[0], coords.shape[1]\n",
+    "    height, width = img.shape[:2]\n",
+    "    result = torch.zeros_like(img)\n",
+    "    #rectangles = split_into_rects(coords)\n",
+    "    num_quads = (coords.shape[0] - 1) * (coords.shape[1] - 1)\n",
     "    \n",
-    "    # Let's collect the triangles first\n",
-    "    print('Collecting triangles...')\n",
-    "    triangles = []\n",
-    "    for i in range(grid_height - 1):\n",
-    "        for j in range(grid_width - 1):\n",
-    "            if i % 2 == j % 2:\n",
-    "                v0, v1, v2 = coords[i][j], coords[i+1][j+1], coords[i+1][j]\n",
-    "                u0, u1, u2 = coords[i][j], coords[i][j+1], coords[i+1][j+1]\n",
-    "            else:\n",
-    "                v0, v1, v2 = coords[i][j], coords[i][j+1], coords[i+1][j]\n",
-    "                u0, u1, u2 = coords[i+1][j], coords[i][j+1], coords[i+1][j+1]\n",
-    "\n",
-    "#             if i % 2 == j % 2:\n",
-    "#                 v0, v1, v2 = coords[j][i], coords[j+1][i+1], coords[j][i+1]\n",
-    "#                 u0, u1, u2 = coords[j][i], coords[j+1][i], coords[j+1][i+1]\n",
-    "#             else:\n",
-    "#                 v0, v1, v2 = coords[j][i], coords[j+1][i], coords[j][i+1]\n",
-    "#                 u0, u1, u2 = coords[j][i+1], coords[j+1][i], coords[j+1][i+1]\n",
-    "            \n",
-    "            triangles.append(Triangle(v0, v1, v2))\n",
-    "            triangles.append(Triangle(u0, u1, u2))\n",
+    "    for i in range(coords.shape[0]):\n",
+    "        for j in range(coords.shape[1]):\n",
+    "            quad = Quad(coords[i][j], coords[i][j+1], coords[i+1][j+1], coords[i+1][j])\n",
+    "            num_rows = \n",
     "    \n",
-    "    # Then, we loop over the triangles and rasterize them using barycentric coordinates\n",
-    "    return rasterize_triangles(triangles, img.shape[0], img.shape[1], img)\n",
-    "    \n",
-    "    \n",
-    "def rasterize_triangles(triangles: List[Triangle], h, w, full_image: Tensor) -> Tensor:\n",
-    "    \"\"\"\n",
-    "    Takes the triangles and rasterizes them to a given height and width.\n",
-    "    Also takes the full image for querying colors\n",
-    "    \"\"\"\n",
-    "    result = torch.zeros_like(full_image)\n",
-    "#     num_repeated_pixels = 0\n",
-    "    \n",
-    "    for triangle_idx, triangle in tqdm(enumerate(triangles), desc=f'Rasterizing {len(triangles)} triangles', total=len(triangles)):\n",
-    "        min_pos, max_pos = triangle.get_min_pos(), triangle.get_max_pos()\n",
-    "        triangle_area = compute_det_from_points(triangle.v0, triangle.v1, triangle.v2);\n",
-    "        \n",
-    "        #print('Triangle:', triangle.v0, triangle.v1, triangle.v2)\n",
-    "        \n",
-    "        for y in range(math.floor(min_pos[1]), math.ceil(max_pos[1]) + 1):\n",
-    "            for x in range(math.floor(min_pos[0]), math.ceil(max_pos[0]) + 1):\n",
-    "                pixel_pos = (x, y)\n",
-    "                bar_coords_raw = (\n",
-    "                    compute_det_from_points(triangle.v1, triangle.v2, pixel_pos),\n",
-    "                    compute_det_from_points(triangle.v2, triangle.v0, pixel_pos),\n",
-    "                    compute_det_from_points(triangle.v0, triangle.v1, pixel_pos),\n",
-    "                )\n",
-    "                #print(f'Bar coords', bar_coords_raw)\n",
-    "\n",
-    "                if bar_coords_raw[0] < 0 or bar_coords_raw[1] < 0 or bar_coords_raw[2] < 0:\n",
-    "                    continue\n",
-    "                    \n",
-    "                # Perform top-left check\n",
-    "#                 if bar_coords_raw[0] == 0:\n",
-    "#                     if not check_top_left_rule(triangle.get_edge(0)):\n",
-    "#                         print(f'[{triangle_idx}] skip {x}, {y} for v0', triangle.get_edge(0))\n",
-    "#                         continue\n",
-    "#                 if bar_coords_raw[1] == 0:\n",
-    "#                     if not check_top_left_rule(triangle.get_edge(1)):\n",
-    "#                         print(f'[{triangle_idx}] skip {x}, {y} for v1', triangle.get_edge(1))\n",
-    "#                         continue\n",
-    "#                 if bar_coords_raw[2] == 0:\n",
-    "#                     if not check_top_left_rule(triangle.get_edge(2)):\n",
-    "#                         print(f'[{triangle_idx}] skip {x}, {y} for v2', triangle.get_edge(2))\n",
-    "#                         continue\n",
-    "\n",
-    "                area = sum(bar_coords_raw)\n",
-    "                bar_coords = (bar_coords_raw[0] / area, bar_coords_raw[1] / area, bar_coords_raw[2] / area)\n",
-    "                \n",
-    "#                 if result[y][x].abs().sum() != 0:\n",
-    "#                     num_repeated_pixels += 1\n",
-    "#                     print(f'We have already colored this pixel ({x}, {y}):', result[y][x])\n",
-    "                #print(f'Setting color for {y}, {x}:', triangle.compute_color(bar_coords, full_image))\n",
-    "                result[y][x] = triangle.compute_color(bar_coords, full_image)\n",
-    "                #print(triangle.v0, triangle.v1, triangle.v2)\n",
-    "\n",
-    "#     print(f'Num pixels filled more than once: {num_repeated_pixels}')\n",
-    "    return result.permute(2, 0, 1)\n",
-    "\n",
-    "\n",
-    "def check_top_left_rule(edge) -> bool:\n",
-    "    return ((edge[1] == 0 and edge[0] > 0) or (edge[1] > 0))\n",
-    "\n",
-    "\n",
-    "# def compute_det_from_points(u: Tuple[float, float], v: Tuple[float, float], point: Tuple[float, float]) -> float:\n",
-    "#     return (point[0] - u[0]) * (v[1] - u[1]) - (point[1] - u[1]) * (v[0] - u[0])\n",
-    "\n",
-    "def compute_det_from_points(A: Tuple[float, float], B: Tuple[float, float], C: Tuple[float, float]) -> float:\n",
-    "    # Compute the signed area of the triangle spanned by vectors AB, AC\n",
-    "#     AB = B - A\n",
-    "#     AC = C - A\n",
-    "#     return AB[0] * AC[1] - AB[1] * AC[0]\n",
-    "    return ((B[0] - A[0]) * (C[1] - A[1]) - (B[1] - A[1]) * (C[0] - A[0])) / 2"
+    "#     for y in range(height):\n",
+    "#         for x in range(width):\n",
+    "#             value = "
    ]
   },
   {
