feat: add visualizations

--- a/notebooks/guassian-interpolation.ipynb
+++ b/notebooks/guassian-interpolation.ipynb
@@ -424,30 +424,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NEAREST 8.08\n",
-      "BOX 5.37\n",
-      "BILINEAR 7.15\n",
-      "HAMMING 5.57\n",
-      "BICUBIC 7.57\n",
-      "LANCZOS 6.51\n"
+      "NEAREST 0.01511\n",
+      "BOX 0.01266\n",
+      "BILINEAR 0.01448\n",
+      "HAMMING 0.01312\n",
+      "BICUBIC 0.01511\n",
+      "LANCZOS 0.01404\n"
      ]
     }
    ],
    "source": [
+    "from PIL import Image\n",
+    "import torchvision.transforms.functional as TVF\n",
+    "\n",
     "interps = ['NEAREST', 'BOX', 'BILINEAR', 'HAMMING', 'BICUBIC', 'LANCZOS']\n",
+    "# img_pil = Image.open('../cuda/water.jpg')\n",
+    "img_pil = Image.open('../cuda/room.jpg')\n",
+    "img = TVF.to_tensor(img_pil)\n",
+    "downsample_size = 0.3\n",
+    "downsample_size = round(downsample_size * img.shape[1]), round(downsample_size * img.shape[2])\n",
+    "\n",
     "\n",
     "for interp in range(6):\n",
-    "    pil_img = TVF.to_pil_image(img.permute(2,0,1).byte())\n",
-    "    downsampled = TVF.resize(pil_img, size=(grid_size + 5,grid_size + 5), interpolation=interp)\n",
-    "    upsampled = TVF.resize(downsampled, size=img.shape[:2], interpolation=interp)\n",
-    "    print(interps[interp], f'{(torch.from_numpy(np.array(upsampled)).unsqueeze(2) - img.float()).abs().mean().item():.02f}')"
+    "    downsampled = TVF.resize(img_pil, size=downsample_size, interpolation=2)\n",
+    "    upsampled = TVF.resize(downsampled, size=(img.shape[1], img.shape[2]), interpolation=interp)\n",
+    "    #print(interps[interp], f'{(TVF.to_tensor(upsampled) - img).pow(2).mean().item():.05f}')\n",
+    "    print(interps[interp], f'{(TVF.to_tensor(upsampled) - img).abs().mean().item():.05f}')"
    ]
   },
   {
@@ -488,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
